revert package version specification for stylelint-config-fluid

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rimraf dist",
     "debug": "DEBUG=Eleventy* eleventy",
     "lint:css": "stylelint src/assets/styles/**/*.scss",
-    "lint:js": "eslint \"**/*.js\"",
+    "lint:js": "eslint '**/*.js'",
     "lint": "run-s lint:*",
     "test:lint": "run-s lint",
     "test:backstop": "start-server-and-test start http://localhost:8080 backstop:test",
@@ -92,7 +92,7 @@
     "sass-loader": "13.3.1",
     "start-server-and-test": "2.0.0",
     "stylelint": "15.6.2",
-    "stylelint-config-fluid": "0.2.1",
+    "stylelint-config-fluid": "github:fluid-project/stylelint-config-fluid#8b6f7964ceb21acf690efb07b28fdda589ecfdd2",
     "stylelint-config-standard-scss": "9.0.0"
   }
 }
