GH-454: add resources page (resolves #454, #515) (#523)
* GH-454: add the base template for Resources page

* update layout of resources page

* GH-454: add resources data

* remove resource prefix from resources css style rules

* add single resource layout and display resource preview on authoring interface

* GH-454: generate resourceData.json for filtering

* fix lint errors

* add custom filter to get label of resource metadata objects and display the metadata label for resource tags

* fix lint issues

* GH-454: add js code handling the render & filtering on resources page

* GH-454: update config.yml for saving resources

* GH-454: Projects and Tools page is now only used for projects

* add svg icons for resource topic and type

* update layout of the resources page

* GH-454: add checkbox style for the resources page

* GH-454: populate filter checkboxes

* GH-454: implement apply filter function

* add components for filter

* update layout of resources page

* add svg assets for filter expand and collapse icons

* update layout for filter and resources page

* update resources page style

* add dynamic filter scripts

* fix lint issues

* update based on PR feedback

* add svg assets for filter tag and external link

* add publishedYear property values for resources

* add new field for thumbnail alt text for resources

* add filter functionalities for resources page

* fix lint issues

* make link work in resources page

* update filter header div to be the expand/collapse button

* fix based on PR feedback

* fix based on PR feedback

* fix: fix a linting error

* update based on PR feedback

* remove unused media files

* fix an issue thumbnail images for resources get rendered with a quotation mark

* fix an issue with resources page alt text

* implement a helper function to replace special characters with entity name

* fix layout issue for resources page

* add thumbn

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -162,10 +162,10 @@ collections:
               - {label: Description, name: description, widget: text}
               - {label: Major Milestone, name: major, widget: boolean}
           - {label: "Body", name: "body", widget: "markdown", required: false}
-      - name: "projects-and-tools"
-        label: "Projects and Tools"
+      - name: "projects"
+        label: "Projects"
         delete: false
-        file: "src/projects-and-tools.md"
+        file: "src/projects.md"
         slug: "{{slug}}"
         fields:
           - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/projects.njk"}
@@ -441,20 +441,80 @@ collections:
       - {label: "Project Listing Description", name: "description", widget: "markdown", required: false, editor_components: ["image", "file"], hint: "This is text that appears for a project in the projects listing. This description is not required for sub-pages."}
       - {label: "External Project Website", name: "link", widget: "string", required: false, hint: "This is not required for sub-pages."}
       - {label: "Body", name: "body", required: false, widget: "markdown", hint: "This is the content that appears for a project page hosted on the IDRC site."}
-  - name: "tools"
-    label: "Tools"
-    label_singular: "Tool"
-    folder: "src/tools"
+  - name: "resources"
+    label: "Resources"
+    label_singular: "Resource"
+    folder: "src/resources"
     slug: "{{slug}}"
-    preview_path: "/tools/{{slug}}"
+    preview_path: "/resources/{{slug}}"
     create: true
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/single--tool.njk"}
-      - {label: "Title", name: "title", widget: "string", required: true}
-      - {label: "Short Name", name: "shortName", widget: "string", required: false}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/single--resource.njk"}
+      - {label: "Resource Name", name: "title", widget: "string", required: true}
       - {label: "Description", name: "description", widget: "markdown", required: true, editor_components: ["image", "file"]}
-      - {label: "Tags", name: "tags", widget: "list", required: false}
-      - {label: "Link", name: "link", widget: "string", required: true}
+      - {label: "Published Year", name: "publishedYear", widget: "string", hint: "The year this resource was first publicly available.", required: true}
+      - {label: "Thumbnail Image", name: "thumbnailImage", widget: "image", required: false, hint: "Suggested size: 680x494px. Images not fitting this aspect ratio will appear stretched."}
+      - {label: "Thumbnail Image Alt Text", name: "thumbnailAltText", widget: "string", required: false, hint: "If alt text is left blank, 'Thumbnail image for [Resource Name]' will be used by default."}
+      - label: "Resource Topics"
+        name: "topics"
+        widget: "relation"
+        multiple: true
+        collection: resourceMetadata
+        file: resourceTopics
+        value_field: resourceTopics.*.value
+        display_fields: [resourceTopics.*.label]
+        search_fields: [resourceTopics.*.label]
+        required: true
+      - label: "Resource Types"
+        name: "types"
+        widget: "relation"
+        multiple: true
+        collection: resourceMetadata
+        file: resourceTypes
+        value_field: resourceTypes.*.value
+        display_fields: [resourceTypes.*.label]
+        search_fields: [resourceTypes.*.label]
+        required: true
+      - {label: "Resource URL", name: "link", widget: "string", required: true}
+  - name: resourceMetadata
+    label: Resource Metadata
+    files:
+      - label: Resource Topics
+        name: resourceTopics
+        file: "src/_data/resourceTopics.json"
+        editor:
+          preview: true
+        fields:
+          - label: "Resource Topics"
+            label_singular: "Resource Topic"
+            name: "resourceTopics"
+            widget: "list"
+            summary: "{{fields.label}}"
+            fields:
+              - label: "Value"
+                name: "value"
+                widget: "string"
+              - label: "Label"
+                name: "label"
+                widget: "string"
+      - label: Resource Types
+        name: resourceTypes
+        file: "src/_data/resourceTypes.json"
+        editor:
+          preview: true
+        fields:
+          - label: "Resource Types"
+            label_singular: "Resource Type"
+            name: "resourceTypes"
+            widget: "list"
+            summary: "{{fields.label}}"
+            fields:
+              - label: "Value"
+                name: "value"
+                widget: "string"
+              - label: "Label"
+                name: "label"
+                widget: "string"
   - label: "Globals"
     name: "globals"
     files:
