--- a/src/ideas/ideas.json
+++ b/src/ideas/ideas.json
@@ -1,6 +1,6 @@
 {
     "layout": "layouts/single--idea.njk",
-    "permalink": "/ideas/{{ title | slugify }}/",
+    "permalink": "/ideas/{{ page.fileSlug | slugify }}/",
     "headerBgColor": "white",
     "author": "IDRC Team",
     "thumbnailImage": "/media/default.jpg"
