adjust lint dependencies

--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "sass": "1.62.1",
     "sass-loader": "13.3.1",
     "start-server-and-test": "2.0.0",
-    "stylelint": "15.6.2",
-    "stylelint-config-fluid": "github:fluid-project/stylelint-config-fluid#8b6f7964ceb21acf690efb07b28fdda589ecfdd2",
-    "stylelint-config-standard-scss": "9.0.0"
+    "stylelint": "14.16.1",
+    "stylelint-config-fluid": "1.0.0",
+    "stylelint-config-standard-scss": "6.1.0"
   }
 }
