feat: add toggle to allow news and ideas to be archived
Resolves #170.

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -370,6 +370,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/single--news.njk"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime", time_format: false}
+      - {label: "Archived", name: "archived", widget: "boolean", default: false}
       - {label: "Author", name: "author", widget: "string", required: false, default: "IDRC Team"}
       - {label: "Excerpt", name: "excerpt", widget: "text", required: false}
       - {label: "Permalink Override (Pattern: '/news/your-news-item/index.html')", name: "permalink", widget: "string", required: false}
@@ -389,6 +390,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/single--idea.njk"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime", time_format: false}
+      - {label: "Archived", name: "archived", widget: "boolean", default: false}
       - {label: "Author", name: "author", widget: "string", required: false, default: "IDRC Team"}
       - {label: "Excerpt", name: "excerpt", widget: "text", required: false}
       - {label: "Thumbnail Image", name: "thumbnailImage", widget: "image", required: false}
