fix: eleventy start command (#640)

--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
     "build:cms": "node ./build-cms.js",
     "clean": "rimraf dist",
-    "cms": "netlify-cms-proxy-server",
+    "cms": "node ./build-cms.js -w",
     "debug": "DEBUG=Eleventy* eleventy",
     "dev": "cross-env NODE_ENV=development eleventy --serve",
     "lint:css": "stylelint src/assets/styles/**/*.scss",
     "lint:js": "eslint '**/*.js'",
     "lint": "run-s lint:*",
+    "proxy": "netlify-cms-proxy-server",
     "test:lint": "run-s lint",
     "test:backstop": "start-server-and-test start http://localhost:8080 backstop:test",
     "test": "run-s test:*",
     "start": "npm-run-all -l clean -p start:*",
     "start:webpack": "mix watch",
-    "start:eleventy": "run-p dev cms",
+    "start:eleventy": "run-p dev cms proxy",
     "serve": "npx serve dist"
   },
   "repository": {
