--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "backstop:test": "backstop test --docker --config=backstop.config.js",
     "backstop:test:ci": "backstop test --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
-    "build": "npm-run-all -l clean build:*",
-    "build:webpack": "mix --production",
+    "build": "npm-run-all -l clean build:eleventy",
     "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
     "build:cms": "node ./build-cms.js",
     "clean": "rimraf dist",
@@ -23,8 +22,7 @@
     "test:lint": "run-s lint",
     "test:backstop": "start-server-and-test start http://localhost:8080 backstop:test",
     "test": "run-s test:*",
-    "start": "npm-run-all -l clean -p start:*",
-    "start:webpack": "mix watch",
+    "start": "npm-run-all -l clean -p start:eleventy",
     "start:eleventy": "run-p dev cms proxy",
     "serve": "npx serve dist"
   },
@@ -60,7 +58,7 @@
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "d3-selection": "3.0.0",
-    "eleventy-plugin-fluid": "1.0.2",
+    "eleventy-plugin-fluid": "fluid-project/eleventy-plugin-fluid#feat/js-processing",
     "eleventy-plugin-i18n-gettext": "^1.5.1",
     "eleventy-plugin-pwa": "1.0.8",
     "eleventy-plugin-sharp": "0.1.1",
@@ -68,9 +66,7 @@
     "infusion": "4.6.0",
     "markdown-it": "13.0.1",
     "npm-run-all": "4.1.5",
-    "nunjucks": "3.2.4",
-    "postcss": "8.4.24",
-    "stylelint-order": "6.0.3"
+    "nunjucks": "3.2.4"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
@@ -84,18 +80,14 @@
     "estrella": "1.4.1",
     "html-minifier": "4.0.0",
     "husky": "8.0.3",
-    "laravel-mix": "6.0.49",
     "linkedom": "0.14.26",
     "lint-staged": "13.2.2",
-    "move-file": "2.1.0",
     "netlify-cms-proxy-server": "1.3.24",
-    "resolve-url-loader": "5.0.0",
     "rimraf": "5.0.1",
-    "sass": "1.63.6",
-    "sass-loader": "13.3.2",
     "start-server-and-test": "2.0.0",
     "stylelint": "14.16.1",
     "stylelint-config-fluid": "1.0.0",
-    "stylelint-config-standard-scss": "6.1.0"
+    "stylelint-config-standard-scss": "6.1.0",
+    "stylelint-order": "6.0.3"
   }
 }
