--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "d3-selection": "3.0.0",
-    "eleventy-plugin-fluid": "fluid-project/eleventy-plugin-fluid#feat/js-processing",
+    "eleventy-plugin-fluid": "fluid-project/eleventy-plugin-fluid#main",
     "eleventy-plugin-i18n-gettext": "^1.5.1",
     "eleventy-plugin-pwa": "1.0.8",
     "eleventy-plugin-sharp": "0.1.1",
