--- a/src/ideas/ideas.json
+++ b/src/ideas/ideas.json
@@ -3,6 +3,7 @@
     "permalink": "/ideas/{{ page.fileSlug | slugify }}/",
     "headerBgColor": "white",
     "author": "IDRC Team",
-    "thumbnailImage": "/media/default.jpg"
+    "thumbnailImage": "/media/default.jpg",
+    "locale": "en-CA"
 }
     
