--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,12 @@
 [build]
   command = "npm run build"
-  publish = "dist"
-  # ignore = "git log -1 --pretty=%B | grep dependabot"
+  publish = "_site"
+  ignore = "git log -1 --pretty=%B | grep dependabot"
 
 [dev]
   command = "npm run start"
   targetPort = 8080
-  publish = "dist"
+  publish = "_site"
   autoLaunch = true
   framework = "#custom"
 
