--- a/package.json
+++ b/package.json
@@ -52,15 +52,17 @@
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "d3-selection": "3.0.0",
-    "eleventy-plugin-fluid": "fluid-project/eleventy-plugin-fluid#main",
-    "eleventy-plugin-i18n-gettext": "^1.5.1",
+    "eleventy-plugin-fluid": "2.3.1",
     "eleventy-plugin-pwa": "1.0.8",
     "eleventy-plugin-sharp": "0.1.1",
     "eslint-config-fluid": "2.1.1",
     "infusion": "4.6.0",
     "markdown-it": "13.0.1",
+    "netlify-cms": "2.10.192",
     "npm-run-all": "4.1.5",
-    "nunjucks": "3.2.4"
+    "nunjucks": "3.2.4",
+    "prop-types": "15.8.1",
+    "react": "16.14.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
