feat: complete upgrade to new Trivet architecture

--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "backstop:test": "backstop test --docker --config=backstop.config.js",
     "backstop:test:ci": "backstop test --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
-    "build": "npm-run-all -l clean build:eleventy",
+    "build": "npm-run-all -l clean build:*",
     "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
     "build:cms": "node ./build-cms.js",
     "clean": "rimraf _site",
     "cms": "node ./build-cms.js -w",
     "debug": "DEBUG=Eleventy* eleventy",
     "dev": "cross-env NODE_ENV=development eleventy --serve",
-    "lint:css": "stylelint src/assets/styles/**/*.scss",
-    "lint:js": "eslint '**/*.js'",
-    "lint": "run-s lint:*",
+    "lint": "run-s -l lint:*",
+    "lint:css": "stylelint \"**/*.scss\"",
+    "lint:js": "eslint \"**/*.js\"",
+    "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
+    "lint:yml": "eslint \"**/*.yml\"",
     "proxy": "netlify-cms-proxy-server",
-    "test:lint": "run-s lint",
-    "test:backstop": "start-server-and-test start http://localhost:8080 backstop:test",
-    "test": "run-s test:*",
+    "test": "start-server-and-test start http://localhost:8080 backstop:test",
     "start": "npm-run-all -l clean -p start:eleventy",
     "start:eleventy": "run-p dev cms proxy",
     "serve": "npx serve _site"
@@ -39,14 +39,6 @@
     "url": "https://github.com/inclusive-design/idrc/issues"
   },
   "homepage": "https://github.com/inclusive-design/idrc#readme",
-  "lint-staged": {
-    "src/assets/styles/**/*.scss": [
-      "stylelint --fix"
-    ],
-    "src/assets/scripts/**/*.js": [
-      "eslint --fix"
-    ]
-  },
   "dependencies": {
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-navigation": "0.3.5",
@@ -67,22 +59,31 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
     "@commitlint/config-conventional": "17.6.5",
-    "@sindresorhus/slugify": "2.2.1",
     "backstopjs": "6.2.2",
     "cross-env": "7.0.3",
-    "eleventy-plugin-error-overlay": "1.0.0",
-    "eslint": "8.44.0",
-    "eslint-plugin-react": "7.32.2",
+    "eslint": "8.46.0",
+    "eslint-config-fluid": "2.1.1",
+    "eslint-plugin-jsdoc": "46.4.5",
+    "eslint-plugin-react": "7.33.1",
+    "eslint-plugin-yml": "1.8.0",
     "estrella": "1.4.1",
     "husky": "8.0.3",
-    "linkedom": "0.14.26",
-    "lint-staged": "13.2.2",
+    "linkedom": "0.15.1",
+    "lint-staged": "13.2.3",
+    "markdownlint-cli2": "0.8.1",
+    "markdownlint-config-fluid": "0.1.5",
     "netlify-cms-proxy-server": "1.3.24",
+    "postcss-scss": "4.0.6",
     "rimraf": "5.0.1",
     "start-server-and-test": "2.0.0",
     "stylelint": "14.16.1",
     "stylelint-config-fluid": "1.0.0",
-    "stylelint-config-standard-scss": "6.1.0",
-    "stylelint-order": "6.0.3"
+    "stylelint-config-standard-scss": "7.0.1",
+    "stylelint-use-logical-spec": "5.0.0"
+  },
+  "lint-staged": {
+    "*.css": "stylelint --fix",
+    "*.{js,yml}": "eslint --fix",
+    "*.md": "markdownlint-cli2 --fix"
   }
 }
