--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "backstop:test": "backstop test --docker --config=backstop.config.js",
     "backstop:test:ci": "backstop test --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
-    "build": "npm-run-all -l clean build:*",
-    "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
+    "build": "npm-run-all -l clean -p build:*",
     "build:cms": "node ./build-cms.js",
+    "build:eleventy": "cross-env NODE_ENV=production eleventy",
     "clean": "rimraf _site",
-    "cms": "node ./build-cms.js -w",
+    "cms": "netlify-cms-proxy-server",
     "debug": "DEBUG=Eleventy* eleventy",
     "dev": "cross-env NODE_ENV=development eleventy --serve",
     "lint": "run-s -l lint:*",
@@ -20,11 +20,11 @@
     "lint:js": "eslint \"**/*.js\"",
     "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "eslint \"**/*.yml\"",
-    "proxy": "netlify-cms-proxy-server",
     "test": "start-server-and-test start http://localhost:8080 backstop:test",
-    "start": "npm-run-all -l clean -p start:eleventy",
-    "start:eleventy": "run-p dev cms proxy",
-    "serve": "npx serve _site"
+    "start": "npm-run-all -l clean -p start:*",
+    "start:cms": "node ./build-cms.js -w",
+    "start:eleventy": "run-p dev cms",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
