--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "d3-selection": "3.0.0",
     "eleventy-plugin-fluid": "2.3.1",
-    "eleventy-plugin-pwa": "1.0.8",
+    "eleventy-plugin-pwa-v2": "1.0.0",
     "eleventy-plugin-sharp": "0.1.1",
     "eslint-config-fluid": "2.1.1",
     "infusion": "4.6.0",
