--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -8,41 +8,41 @@ jobs:
     if: github.repository_owner == 'inclusive-design' && github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Wait for Netlify deploy preview
-      uses: jakepartusch/wait-for-netlify-action@v1.4
-      id: netlify
-      with:
-        site_name: 'idrc'
-        max_timeout: 300
-    - name: Run Lighthouse CI audits
-      uses: treosh/lighthouse-ci-action@v9
-      with:
-        runs: 3
-        urls: |
-          ${{ steps.netlify.outputs.url }}
-        uploadArtifacts: true
-        temporaryPublicStorage: true
-        configPath: ./.lighthouserc.js
+      - uses: actions/checkout@v3
+      - name: Wait for Netlify deploy preview
+        uses: jakepartusch/wait-for-netlify-action@v1.4
+        id: netlify
+        with:
+          site_name: idrc
+          max_timeout: 300
+      - name: Run Lighthouse CI audits
+        uses: treosh/lighthouse-ci-action@v9
+        with:
+          runs: 3
+          urls: |
+            ${{ steps.netlify.outputs.url }}
+          uploadArtifacts: true
+          temporaryPublicStorage: true
+          configPath: ./.lighthouserc.js
   lhci-desktop:
     name: Run desktop Lighthouse CI audits
     if: github.repository_owner == 'inclusive-design' && github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Wait for Netlify deploy preview
-      uses: jakepartusch/wait-for-netlify-action@v1.4
-      id: netlify
-      with:
-        site_name: 'idrc'
-    - name: Run Lighthouse CI audits
-      uses: treosh/lighthouse-ci-action@v9
-      with:
-        runs: 3
-        urls: |
-          ${{ steps.netlify.outputs.url }}
-        uploadArtifacts: true
-        temporaryPublicStorage: true
-        configPath: ./.lighthouserc.js
-      env:
-        EMULATE_DEVICE: desktop
+      - uses: actions/checkout@v3
+      - name: Wait for Netlify deploy preview
+        uses: jakepartusch/wait-for-netlify-action@v1.4
+        id: netlify
+        with:
+          site_name: idrc
+      - name: Run Lighthouse CI audits
+        uses: treosh/lighthouse-ci-action@v9
+        with:
+          runs: 3
+          urls: |
+            ${{ steps.netlify.outputs.url }}
+          uploadArtifacts: true
+          temporaryPublicStorage: true
+          configPath: ./.lighthouserc.js
+        env:
+          EMULATE_DEVICE: desktop
