--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "debug": "DEBUG=Eleventy* eleventy",
     "dev": "cross-env NODE_ENV=development eleventy --serve",
     "lint": "run-s -l lint:*",
-    "lint:css": "stylelint \"**/*.scss\"",
-    "lint:js": "eslint \"**/*.{js,md}\"",
+    "lint:styles": "stylelint \"**/*.scss\"",
+    "lint:scripts": "eslint \"**/*.{js,md}\"",
     "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "eslint \"**/*.yml\"",
     "test": "start-server-and-test start http://localhost:8080 backstop:test",
