--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:cms": "node ./build-cms.js",
     "build:eleventy": "cross-env NODE_ENV=production eleventy",
     "clean": "rimraf _site",
-    "cms": "netlify-cms-proxy-server",
+    "cms": "decap-server",
     "debug": "DEBUG=Eleventy* eleventy",
     "dev": "cross-env NODE_ENV=development eleventy --serve",
     "lint": "run-s -l lint:*",
@@ -44,13 +44,13 @@
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "d3-selection": "3.0.0",
+    "decap-cms": "3.0.0",
     "eleventy-plugin-fluid": "2.4.0",
     "eleventy-plugin-pwa-v2": "1.0.0",
     "eleventy-plugin-sharp": "0.1.1",
     "eslint-config-fluid": "2.1.1",
     "infusion": "4.6.0",
     "markdown-it": "13.0.1",
-    "netlify-cms": "2.10.192",
     "npm-run-all": "4.1.5",
     "nunjucks": "3.2.4",
     "prop-types": "15.8.1",
@@ -61,6 +61,7 @@
     "@commitlint/config-conventional": "17.7.0",
     "backstopjs": "6.2.2",
     "cross-env": "7.0.3",
+    "decap-server": "3.0.0",
     "eslint": "8.47.0",
     "eslint-config-fluid": "2.1.1",
     "eslint-plugin-jsdoc": "46.4.6",
@@ -73,7 +74,6 @@
     "lint-staged": "14.0.0",
     "markdownlint-cli2": "0.8.1",
     "markdownlint-config-fluid": "0.1.5",
-    "netlify-cms-proxy-server": "1.3.24",
     "postcss-scss": "4.0.7",
     "rimraf": "5.0.1",
     "start-server-and-test": "2.0.0",
