--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -465,6 +465,7 @@ collections:
     i18n: false
     fields:
       - {label: Layout, name: layout, widget: hidden, default: layouts/single--resource.njk}
+      - {label: Important, name: pinned, widget: boolean, default: false}
       - {label: Resource Name, name: title, widget: string, required: true}
       - {label: Description, name: description, widget: markdown, required: true, editor_components: [image, file]}
       - {label: Published Year, name: publishedYear, widget: string, hint: The year this resource was first publicly available., required: true}
