--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -442,6 +442,7 @@ collections:
     preview_path: "/projects/{{fields.slug}}"
     create: true
     i18n: true
+    sortable_fields: [title, order]
     fields:
       - {label: Layout, name: layout, widget: hidden, default: layouts/project.njk, i18n: duplicate}
       - {label: Project Name, name: projectName, widget: string, required: true, hint: "Suggestion: If this is a sub-page of a project, enter the name of the project here.", i18n: true}
@@ -449,6 +450,7 @@ collections:
       - {label: Body Title, name: title, widget: string, required: true, hint: "The title that appears after the Project Name and before the Body content. Suggestion: use a descriptive title which includes keywords from the project.", i18n: true}
       - {label: Project Short Name, name: shortName, widget: string, required: false, hint: Short name for the project used to generate text labels for project website links. This is not required for sub-pages of a project., i18n: true}
       - {label: Parent Page, name: parentTitle, widget: relation, collection: projects, value_field: title, search_fields: [title], required: false, hint: This is required for sub-pages of a project to define the sub-page hierarchy., i18n: true}
+      - {label: Order, name: order, widget: number, required: false, hint: Order in which the project should appear., i18n: duplicate}
       - {label: Subpage Order, name: subPageOrder, widget: number, required: false, hint: "Hint: if using this, all sub-pages at the same level should have an order number specified. Leave blank to have sub-pages appear in alphabetical order.", i18n: duplicate}
       - {label: Thumbnail Image, name: thumbnailImage, widget: image, required: false, hint: "Suggested size: 680x494px. Images not fitting this aspect ratio will appear stretched.", i18n: duplicate}
       - {label: Thumbnail Image Alt Text, name: thumbnailAltText, widget: string, required: false, hint: "If alt text is left blank, 'Thumbnail image for [Project Name]' will be used by default.", i18n: true}
